--- a/host-pvc.yaml
+++ b/host-pvc.yaml
@@ -1,12 +1,12 @@
-apiVersion:
-  kind: PersistentVolumeClaim
-  metadata:
-    name: host-pvc
-  spec:
-    volumeName: host-pv
-    accessModes:
-      - ReadWriteOnce
-    storageClassName: standard
-    resources:
-      requests:
-        storage: 1Gi # this is the max i can request here and it is set in the host-pv volume. We could also requests less for this claim. If we had multiple claims for the same PV, we might wanna request less so that in total we don't reuqest more or it will cause errors
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: host-pvc
+spec:
+  volumeName: host-pv
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: standard
+  resources:
+    requests:
+      storage: 1Gi # this is the max i can request here and it is set in the host-pv volume. We could also requests less for this claim. If we had multiple claims for the same PV, we might wanna request less so that in total we don't reuqest more or it will cause errors
