--- a/host-pv.yaml
+++ b/host-pv.yaml
@@ -5,7 +5,7 @@ metadata:
 spec: 
   capacity:
     storage: 1Gi
-  volumeMode: FileSystem
+  volumeMode: Filesystem # Filesystem.  NOT FileSystem
   storageClassName: standard
   accessModes:
     - ReadWriteOnce
