--- a/kubernetes/users-deployment.yaml
+++ b/kubernetes/users-deployment.yaml
@@ -14,4 +14,9 @@ spec:
     spec:
       containers:
         - name: users
-          image: taifdev/kub-demo-users
+          image: taifdev/kub-demo-users:latest
+          env:
+            - name: AUTH_ADDRESS
+              value: localhost # we can also use a file or configmap to hard code the value
+        - name: auth
+          image: taifdev/kub-demo-auth:latest
