--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,5 +14,7 @@ services:
     ports: 
       - "8000:8000"
     environment:
+      AUTH_ADDRESS: auth
+      AUTH_SERVICE_SERVICE_HOST: auth
       TASKS_FOLDER: tasks
     
